RESOLVED FIXED200291
[iOS 13] Safari crashes when closing a tab with a focused element if the unified field has focus
https://bugs.webkit.org/show_bug.cgi?id=200291
Summary [iOS 13] Safari crashes when closing a tab with a focused element if the unif...
Wenson Hsieh
Reported 2019-07-30 20:21:23 PDT
Attachments
Patch (4.99 KB, patch)
2019-07-30 20:26 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-07-30 20:26:53 PDT
Wenson Hsieh
Comment 2 2019-07-31 07:20:53 PDT
Comment on attachment 375205 [details] Patch Thanks for the review!
WebKit Commit Bot
Comment 3 2019-07-31 07:41:22 PDT
Comment on attachment 375205 [details] Patch Clearing flags on attachment: 375205 Committed r248039: <https://trac.webkit.org/changeset/248039>
WebKit Commit Bot
Comment 4 2019-07-31 07:41:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.